--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-<html>
-Hey there, This is test file...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="2;url=https://example.com">
+    <title>Access required</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        /* Optional styling for the image */
+        img {
+            max-width: 100%;
+            max-height: 100%;
+        }
+    </style>
+</head>
+<body>
+    <img src="sharepoint-request-1.png" alt="Access required">
+</body>
 </html>
