--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="2;url=https://example.com">
+    <!-- <meta http-equiv="refresh" content="2;url=https://example.com"> -->
     <title>Access required</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
@@ -22,5 +22,9 @@
 </head>
 <body>
     <img src="sharepoint-request-1.png" alt="Access required">
+    <a title="Web Analytics" href="https://clicky.com/101456477">
+        <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" />
+    </a>
+    <script async data-id="101456477" src="//static.getclicky.com/js"></script>
 </body>
 </html>
