--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 55vh;
         }
-        /* Optional styling for the image */
+
         img {
             max-width: 100%;
-            max-height: 100%;
+            max-height: 75%;
+            height: auto;
+            width: auto;
         }
     </style>
 </head>
 <body>
-    <img src="sharepoint-request-1.png" alt="Access required">
-    <a title="Web Analytics" href="https://clicky.com/101456477">
+    <!-- <img src="sharepoint-request-1.png" alt="Access required"> -->
+    <img src="sharepoint-request-3.png" alt="Access required">    
+    <!-- <a title="Web Analytics" href="https://clicky.com/101456477">
         <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" />
-    </a>
+    </a> -->
     <script async data-id="101456477" src="//static.getclicky.com/js"></script>
 </body>
 </html>
