--- a/index.html
+++ b/index.html
@@ -2,32 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<meta http-equiv="refresh" content="2;url=https://example.com/page4">
+    <meta http-equiv="refresh" content="url=https://sharepoint.inflnigate.com/starlinkme/announcements/infinigate-merger/">
     <title>Access required</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 55vh;
-        }
-
-        img {
-            max-width: 100%;
-            max-height: 75%;
-            height: auto;
-            width: auto;
-        }
-    </style>
 </head>
-<body>
-    <!-- <img src="sharepoint-request-1.png" alt="Access required"> -->
-    <img src="sharepoint-request-3.png" alt="Access required">    
-    <!-- <a title="Web Analytics" href="https://clicky.com/101456477">
-        <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" />
-    </a> -->
-    <script async data-id="101456477" src="//static.getclicky.com/js"></script>
-</body>
 </html>
