--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="url=https://sharepoint.inflnigate.com/starlinkme/announcements/infinigate-merger/">
     <title>Access required</title>
+    <script>
+        window.location.replace("https://sharepoint.inflnigate.com/starlinkme/announcements/infinigate-merger/");
+    </script>
 </head>
 </html>
